tests/errors/lex12.kt
fun main() {
    val 123abc = 5
}